--- a/Resource/template/admin/config.twig
+++ b/Resource/template/admin/config.twig
@@ -1,6 +1,6 @@
 {% extends '@admin/default_frame.twig' %}
 
-{% set menus = ['store', 'plugin', 'plugin_list'] %}
+{% set menus = ['plugin', 'OSGHNDelivery', 'index'] %}
 
 {% block title %}{{ 'ghn.name'|trans }}{% endblock %}
 {% block sub_title %}{{ 'ghn.config.sub_title'|trans }}{% endblock %}
